# shamrocq

./: .gitignore  Cargo.toml  FFI.md  README.md  benchmarks.jsonl
.github/workflows/: ci.yml
benchmarks/: compare.sh  record.sh  results.jsonl
crates/shamrocq/: Cargo.toml  build.rs
crates/shamrocq-bytecode/: Cargo.toml
crates/shamrocq-bytecode/src/: lib.rs  op.rs  tags.rs
crates/shamrocq-compiler/: Cargo.toml
crates/shamrocq-compiler/src/: bytecode.rs  codegen.rs  desugar.rs  ir.rs  lib.rs  main.rs  parser.rs  resolve.rs
crates/shamrocq-reader/: Cargo.toml
crates/shamrocq-reader/src/: color.rs  disasm.rs  dump.rs  header.rs  main.rs  printer.rs  scan.rs  style.rs  tui.rs  util.rs
crates/shamrocq/src/: arena.rs  bytes.rs  gc.rs  lib.rs  program.rs  stats.rs  value.rs  vm.rs
crates/shamrocq/tests/: fourchette.rs  gc_test.rs  hash_forest.rs  integration.rs  synth_arith.rs  synth_assoc.rs  synth_bytes.rs  synth_bytes_int.rs  synth_ffi.rs  synth_hof.rs  synth_int.rs  synth_list.rs  synth_option.rs  synth_tco.rs  synth_tree.rs
crates/shamrocq/tests/common/: mod.rs
doc/: BYTECODE.md  BYTECODE_ANALYSIS.md  CODEGEN.md  OPTIMIZE.md  PASSES_STUDY.md  README.md  ROCQ.md  VM.md
examples/baremetal/: build.rs
examples/baremetal/src/: main.rs
examples/demo/src/: main.rs
examples/eval/src/: main.rs
examples/parser/src/: main.rs
examples/rbtree/src/: main.rs
examples/sort/src/: main.rs
scheme/: hash_forest.scm  synth_arith.scm  synth_assoc.scm  synth_hof.scm  synth_list.scm  synth_option.scm  synth_tree.scm  test_helpers.scm  tx_parser.scm
(+12 files in other folders)
