[package]
name = "shamrocq"
version = "0.1.0"
edition = "2021"

[features]
stats = []
integration = ["dep:shamrocq-compiler"]

[dependencies]

[build-dependencies]
shamrocq-compiler = { path = "../shamrocq-compiler", optional = true }

[dev-dependencies]
shamrocq-compiler = { path = "../shamrocq-compiler" }
libc = "0.2"
